2009-03-11 - Sean Huber (shuber@huberry.com)
  * Rename to phby
  * Add test directory

2009-03-10 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Make project structure more like a gem
  * Mixin#mixin now accepts an array or multiple arguments
  * Each member in Mixin#mixin_methods contains an array of the mixed in methods