@@ -1,6 +1,7 @@
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
   * Add test directory
+  * Move Mixin#__call logic into Mixin#send
 
 2009-03-10 - Sean Huber (shuber@huberry.com)
   * Initial commit
